# FileFerry

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  kind-config.yaml  pyrightconfig.json  pytest.ini
fileferry/: .coveragerc  Dockerfile  alembic.ini  pyproject.toml
fileferry/src/: settings.py
fileferry/src/api/: adapter.py
fileferry/src/api/rest/: context.py  di_context.py  main.py
fileferry/src/application/: README.md  Readme.md  __init__.py  adapter.py  protocols.py
fileferry/src/application/adapters/: crud_adapter.py  system_adapter.py
fileferry/src/application/api/: main.py
fileferry/src/application/di/: __init__.py  filemeta.py
fileferry/src/application/errors/: infra_codes.py  mappers.py
fileferry/src/application/exceptions/: infra_handler.py
fileferry/src/application/orchestrators/: adapter.py  delete_file_adapter.py  file_adapter.py  healtcheck_adapter.py  retrieve_file_adapter.py  upload_file_adapter.py
fileferry/src/application/services/: file.py  retrieve_file.py  upload_file.py
fileferry/src/application/usecases/: __init__.py  delete.py  delete_file.py  healthcheck.py  retrieve.py  retrieve_file.py  update.py  upload.py  upload_file.py
fileferry/src/application/utils/: decorators.py
fileferry/src/composition/: README.md  __init__.py  contracts.py  create_app.py  di.py  resolver.py
fileferry/src/composition/application_service/: factory.py
fileferry/src/composition/bootstrap/: minio_sqla.py  upload_minio_sqla.py
fileferry/src/composition/containers/: adapters.py  application.py  domain.py  infrastructure.py  registry.py  usecases.py
fileferry/src/composition/domain_service/: factory.py
fileferry/src/composition/minio/: config.py  factory.py
fileferry/src/composition/scenarios/: minio_sqla.py
fileferry/src/composition/uow/: factory.py
fileferry/src/composition/upload_service/: factory.py
fileferry/src/composition/usecases/: factory.py
fileferry/src/contracts/: README.md  Readme.md  __init__.py  api.py  application.py  composition.py  domain.py
fileferry/src/contracts/application/: __init__.py  adapter.py  system_adapter.py
fileferry/src/contracts/domain/: __init__.py  policies.py
fileferry/src/contracts/infrastructure/: __init__.py  atomic.py  consistence.py  coordination.py  data_access.py  helper.py  manager.py  scheduler.py  storage.py  transaction.py  transaction_manager.py
fileferry/src/domain/: README.md  Readme.md  protocols.py
fileferry/src/domain/models/: __init__.py  create_filemeta.py  dataclasses.py  enums.py  mixin.py  value_objects.py
fileferry/src/domain/services/: upload_policy.py
fileferry/src/domain/utility/: file_helper.py  file_policy.py
fileferry/src/domain/utils/: file_policy.py
fileferry/src/exceptions/infrastcructure/: storage.py
fileferry/src/factories/: session.py
fileferry/src/factories/repositories/: base.py  sqlalchemy.py
fileferry/src/infrastructure/: Readme.md  transaction.py  uow.py
fileferry/src/infrastructure/atomic/: minio_sqla.py
fileferry/src/infrastructure/config/: db.py  minio.py  postgres.py  redis.py
fileferry/src/infrastructure/coordination/: minio_sqla.py
fileferry/src/infrastructure/data_access/: alchemy.py  minio.py  redis.py
fileferry/src/infrastructure/db/: session.py
fileferry/src/infrastructure/enums/: s3error.py
fileferry/src/infrastructure/http/: create_clientsession.py
fileferry/src/infrastructure/storage/: minio.py  redis.py
fileferry/src/infrastructure/tasks/: consistence.py  manager.py  scheduler.py  wrapper.py
fileferry/src/infrastructure/transactions/: context.py  manager.py
fileferry/src/infrastructure/tx/: context.py  manager.py
fileferry/src/infrastructure/types/: filemeta.py  (+1 more)
fileferry/src/models/: __init__.py  file.py
fileferry/src/monitoring/: cache_background.py  healtcheck.py  latency.py  middleware.py
fileferry/src/repositories/: base.py
fileferry/src/shared/: config.py
fileferry/src/transport/: README.md
fileferry/src/utils/: __init__.py  registry.py
(+243 files in other folders)
