[project]
name = "fileferry"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-magic (>=0.4.27,<0.5.0)",
    "miniopy-async (>=1.22.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis (>=5.2.1,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "ruff (>=0.11.5,<0.12.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "libmagic (>=1.0,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
