[project]
name = "fileferry"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-magic (>=0.4.27,<0.5.0)",
    "miniopy-async (>=1.22.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis (>=5.2.1,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "ruff (>=0.11.5,<0.12.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "libmagic (>=1.0,<2.0)"
]


[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = [
    "I",      
    "Q",
    "E",      
    "W",      
    "F",      
    "UP",     
    "C",      
    "B",      
    "S",      
    "ISC",    
    "ASYNC",  
    "T20",    
    "ANN",    
    "TCH",    
    "PT",     
    "RUF",    
    "PT",     
    "C90",    
    "FAST",   
    "SIM",   
]
lint.ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "F821",   # checks for uses of undefined names, breaks sqlalchemy models
    "UP007",  # large models are unreadable
    "UP032",  # allows str .format
    "ANN401", # allows type Any
    "RUF012", # typing.ClassVar
    "RUF002", # docstring contains ambiguous
    "RUF001",
    "RUF003",
    "RUF100", # Unused `noqa` directive
    "W291",   # Trailing whitespace
    "TC003",  # Type-checking block
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]
"tests/*" = ["S"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
