[project]
name = "fileferry"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-magic (>=0.4.27,<0.5.0)",
    "miniopy-async (>=1.22.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis (>=5.2.1,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "ruff (>=0.11.5,<0.12.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "libmagic (>=1.0,<2.0)",
]
[tool.poetry.group.dev.dependencies]
    pytest = "8.3.3"
    pytest-cov = "4.0"
    pytest-asyncio = "0.18.3"
    httpx = "^0.28.1"
    pytest-mock = "^3.14.0"
    pytest-env = "^1.1.5"
    pytest-xdist = "^3.6.1"
    testcontainers = "^4.10.0"
    moto = "^5.1.3"
    black = "^25.1.0"
pre-commit = "^4.2.0"
pyright = "^1.1.400"

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = [
    "I", "Q", "E", "W", "F", "UP", "C", "B", "S", "ISC", "ASYNC", "T20",
    "ANN", "TCH", "PT", "RUF", "C90", "SIM"
]
lint.ignore = [
    "E501", "B008", "F821", "UP007", "UP032", "ANN401",
    "RUF012", "RUF002", "RUF001", "RUF003", "RUF100", "W291", "TC003"
]

[lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]
"tests/*" = ["S"]




[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-ra -q --asyncio-mode=auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
